crates/wesl/src/snapshots/wesl__frontend__tests__simple_lower.snap
---
source: crates/wesl/src/frontend.rs
expression: result.syntax.to_string()
---
diagnostic (error, foo);
diagnostic (error, foo.bar);
enable f16;
requires unrestricted_pointer_parameters;
requires subgroup_id, buffer_view;

override o1: f32;

override o2 = 0;

@id(10)
override o3: u32 = 0;

@group(0) @binding(2)
var vh1: texture_2d<f32>;

@group(0) @binding(3)
var vh2: sampler;

var<private> vp1 = 0;

var<private> vp2: u32 = 0;

@group(0) @binding(4)
var<storage> vs1: u32;

@group(0) @binding(5)
var<storage, read> vs2: u32;

@group(0) @binding(6)
var<storage, read_write> vs4: u32;

@group(0) @binding(7)
var<storage, read_write> vs5: atomic<u32>;

@group(0) @binding(1)
var<uniform> vu1: u32;

var<workgroup> vw1: u32;

struct S1 {
    m1: u32
}

struct S2 {
    m1: u32,
    m2: f32
}

struct S3 {
    @align(16)
    m1: u32,
    @size(32)
    m2: f32,
    @align(8) @size(4)
    m3: i32,
    m4: vec3<f32>,
    m5: array<u32, 4>,
    m6: S2
}

struct S4 {
    @location(0) @interpolate(flat)
    m1: f32,
    @builtin(position)
    m2: vec4<f32>,
    @location(1) @interpolate(perspective, center)
    m3: f32,
    @location(2) @interpolate(linear, centroid)
    m4: f32,
    @location(3) @interpolate(flat, first)
    m5: f32,
    @invariant @builtin(position)
    m6: vec4<f32>
}

const_assert (1) == 1;

const_assert ((1) < (2));

@compute @workgroup_size(1)
fn comp_main1() {

}

@compute @workgroup_size(8, 8)
fn comp_main2(@builtin(global_invocation_id) p1: vec3<u32>) {

}

@compute @workgroup_size(8, 8, 1)
fn comp_main3(@builtin(local_invocation_id) p1: vec3<u32>, @builtin(local_invocation_index) p2: u32, @builtin(workgroup_id) p3: vec3<u32>, @builtin(num_workgroups) p4: vec3<u32>) {

}

fn f1() {

}

@fragment
fn f10() -> @location(0) vec4<f32> {
    if true {
        discard;
    }
    return vec4<f32>(0.0);
}

fn f11(p1: ptr<function, u32>) {
    *p1 = 1u;
}

fn f12() {
    var v1 = 0u;
    f11(&v1);
}

fn f13() {
    var v1 = vec4<f32>(0.0);
    v1.x = 1.0;
    v1[0] = 2.0;
    v1.x += 1.0;
    var v2 = S3();
    v2.m1 = 1u;
    v2.m4.x = 1.0;
    v2.m5[0] = 1u;
}

fn f2(p1: u32, p2: f32) {

}

fn f3(@builtin(vertex_index) p1: u32, p2: f32) -> u32 {
    return p1;
}

fn f4() -> @location(0) vec4<f32> {
    return vec4<f32>(0.0);
}

@must_use
fn f5() -> u32 {
    return 0u;
}

fn f7() {
    let e1 = 1;
    let e2 = 1.0;
    let e3 = true;
    let e4 = (1);
    let e5 = vec2<f32>();
    let e6 = (1 + 2);
    let e7 = vec3<f32>(1.0, 2.0, 3.0);
    let e8 = vec3f(1.0);
    let e9 = mat2x2<f32>(1.0, 0.0, 0.0, 1.0);
    let e10 = array<u32, 3>(1u, 2u, 3u);
    let e11 = S2(1u, 2.0);
    let e12 = f3(0u, 0.0);
    let e13 = bitcast<u32>(1i);
    let e14 = -1;
    let e15 = !true;
    let e16 = ~1u;
    var e17 = 1;
    let e18 = &e17;
    let e19 = *e18;
    let e20 = 1 + 2;
    let e21 = 1 - 2;
    let e22 = 1 * 2;
    let e23 = 1 / 2;
    let e24 = 1 % 2;
    let e25 = 1u & 2u;
    let e26 = 1u | 2u;
    let e27 = 1u ^ 2u;
    let e28 = 1u << 2u;
    let e29 = 1u >> 2u;
    let e30 = 1 < 2;
    let e31 = 1 > 2;
    let e32 = 1 <= 2;
    let e33 = 1 >= 2;
    let e34 = 1 == 2;
    let e35 = 1 != 2;
    let e36 = true && false;
    let e37 = true || false;
    let e38 = 1 + 2 * 3 - 4 / 2;
    let e39 = (1 + 2) * (3 - 4);
    let e40 = vec4<f32>(1.0, 2.0, 3.0, 4.0);
    let e41 = e40.x;
    let e42 = e40.xy;
    let e43 = e40.xyz;
    let e44 = e40.xyzw;
    let e45 = e40.r;
    let e46 = e40.rgba;
    let e47 = e40[0];
    let e48 = e40.xy[1];
    let e49 = e11.m1;
    let e50 = e11.m2;
    var e51 = array<array<u32, 2>, 2>(array<u32, 2>(1u, 2u), array<u32, 2>(3u, 4u));
    let e52 = e51[0][1];
}

fn f8() {
    let s1 = 1;
    let s2: u32 = 1u;
    const s3 = 2;
    const s4: i32 = 2i;
    var s5 = 3;
    var s6: f32 = 3.0;
    var s7: u32;
    var<function> s8: u32;
    var<function> s9 = 0u;
    var s10 = 0;
    s10 = 1;
    s10 += 1;
    s10 -= 1;
    s10 *= 2;
    s10 /= 2;
    s10 %= 2;
    var s11 = 0u;
    s11 &= 1u;
    s11 |= 1u;
    s11 ^= 1u;
    s11 <<= 1u;
    s11 >>= 1u;
    _ = 1;
    _ = f5();
    var s12 = 0;
    s12++;
    s12--;
    var s13 = 0;
    let s14 = &s13;
    *s14 = 5;
    (*s14) = 6;
    if s10 > 0 {
        s10 = 0;
    }
    if s10 == 0 {
        s10 = 1;
    }
    else if s10 == 1 {
        s10 = 2;
    }
    else {
        s10 = 3;
    }
    @diagnostic(off, derivative_uniformity)
    if true {
    
    }
    switch s10 {
        case 0 {
            s10 = 1;
        }
        case 1, 2 {
            s10 = 2;
        }
        case 3, default {
            s10 = 3;
        }
    }
    switch s10 {
        case default {
            s10 = 0;
        }
    }
    var s15 = 0;
    loop {
        s15 += 1;
        if s15 > 10 {
            break;
        }
        continuing {
            s15 += 1;
            break if s15 > 100;
        }
    }
    loop {
        if s15 > 0 {
            break;
        }
        continue;
    }
    for (var s16 = 0; s16 < 10; s16++) {
        s10 += s16;
    }
    for (; ; ) {
        break;
    }
    for (s10++; ; s10++) {
    
    }
    for (f1(); false; f1()) {
    
    }
    var s17 = 0;
    while s17 < 10 {
        s17 += 1;
    }
    {
        let s18 = 1;
        {
            let s19 = 2;
        }
    }
    f1();
    f2(0u, 0.0);
    const_assert 1 < 2;
}

fn f9(p1: bool) -> u32 {
    if p1 {
        return 1u;
    }
    return 0u;
}

@fragment
fn frag_main(@builtin(position) p1: vec4<f32>, @location(0) @interpolate(flat) p2: f32) -> @location(0) vec4<f32> {
    return vec4<f32>(p2);
}

@vertex
fn vert_main(@builtin(vertex_index) p1: u32) -> @builtin(position) vec4<f32> {
    return vec4<f32>(f32(p1));
}
